Stop header titles from wrapping

--- a/style/header.css
+++ b/style/header.css
@@ -65,7 +65,7 @@ a:hover {
 .nav__item {
     text-decoration: none;
     list-style: none;
-
+    text-wrap: nowrap;
     font-weight: 600;
     font-size: 18px;
     letter-spacing: 0.01em;
@@ -144,14 +144,6 @@ a:hover {
 
 /* Media Queries */
 @media only screen and (max-width: 1160px) {
-    header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 3;
-        width: 100%;
-    }
-
     .header__container {
         display: flex;
         padding: 0 20px;
